# adelie

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  install.ps1  install.sh  package-lock.json  package.json  requirements.txt
adelie/: __init__.py  browser_search.py  checkpoint.py  cli.py  command_loader.py  config.py  context_compactor.py  context_engine.py  dashboard.py  dashboard_html.py  env_strategy.py  feedback_queue.py  gateway.py  git_ops.py  harness_manager.py  hooks.py  i18n.py  interactive.py  llm_client.py  log_rotation.py  loop_detector.py  loop_manual.md  main.py  mcp_client.py  mcp_manager.py  memory_harness.py  metrics.py  orchestrator.py  phases.py  plan_mode.py  policy_engine.py  process_supervisor.py  production_bridge.py  project_context.py  prompt_loader.py  pyproject.toml  registry.py  rules_loader.py  sandbox.py  scheduler.py  (+7 more)
adelie/a2a/: __init__.py  persistence.py  server.py  types.py
adelie/agents/: __init__.py  analyst_ai.py  coder_ai.py  coder_manager.py  dynamic_agent.py  expert_ai.py  inform_ai.py  monitor_ai.py  research_ai.py  reviewer_ai.py  runner_ai.py  scanner_ai.py  tester_ai.py  writer_ai.py
adelie/channels/: __init__.py  base.py  discord.py  router.py  slack.py
adelie/commands/: __init__.py  _helpers.py  config.py  integrations.py  knowledge.py  monitoring.py  run.py  workspace.py
adelie/integrations/: __init__.py  telegram_bot.py
adelie/kb/: __init__.py  embedding_store.py  retriever.py
adelie/prompts/: coder.md  expert.md  reviewer.md
adelie/utils/: ast_checker.py  dep_sync.py  (+1 more)
(+92 files in other folders)
